--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url=jdbc:snowflake://jfgedkp-ld48707.snowflakecomputing.com/?d
 spring.datasource.username=FLACO78
 spring.datasource.password=Autogidas12345!
 spring.datasource.driver-class-name=net.snowflake.client.jdbc.SnowflakeDriver
+spring.jpa.properties.hibernate.dialect=net.snowflake.hibernate.dialect.SnowflakeDialect
 spring.sql.init.platform=snowflake
+
